feat: finaly html structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contador</title>
 </head>
 <body>
     <main>
         <section>            
             <h1>contador</h1>
+            <h2>0</h2>
+            <div>
+                <button>Diminuir</button>
+                <button>Limpar</button>
+                <button>Aumentar</button>
+            </div>
         </section>
     </main>
 </body>
