--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contador</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <main>
         <section>            
             <h1>contador</h1>
             <h2>0</h2>
-            <div>
+            <div id="buttons">
                 <button>Diminuir</button>
                 <button>Limpar</button>
                 <button>Aumentar</button>
@@ -18,4 +19,5 @@
         </section>
     </main>
 </body>
+<script src="./assets/script.js"></script>
 </html>
